Remove unused class in h1

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <div class="col-sm d-flex align-items-center justify-content-center h-100">
                   <div id="app" class="card p-3">
                       <div class="card-body text-center">
-                          <h1 class="">The Æsop's Fable Randomizer</h1>
+                          <h1>The Æsop's Fable Randomizer</h1>
                           <button onclick="goRandom()" type="button" class="btn btn-light">Randomize</button>
                       </div>
                   </div>
