--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Æsop's Fable Randomizer</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -62,7 +62,7 @@
               <div class="col-sm d-flex align-items-center justify-content-center h-100">
                   <div id="app" class="card p-3">
                       <div class="card-body text-center">
-                          <h1>The Æsop's Fable Randomizer</h1>
+                          <h1>Æsop's Fable Randomizer</h1>
                           <button onclick="goRandom()" type="button" class="btn btn-light">Randomize</button>
                       </div>
                   </div>
