Improve sizing of CTA

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
         }
 
         #app h1 {
-            font-size: 3rem;
+            font-size: 3.2rem;
             color: #333;
+        }
+
+        #app button {
+            font-size: 1.6rem;
         }
     </style>
     <script>
@@ -62,7 +66,7 @@
               <div class="col-sm d-flex align-items-center justify-content-center h-100">
                   <div id="app" class="card p-3">
                       <div class="card-body text-center">
-                          <h1>Æsop's Fable Randomizer</h1>
+                          <h1 class="pb-3">Æsop's Fable Randomizer</h1>
                           <button onclick="goRandom()" type="button" class="btn btn-light">Randomize</button>
                       </div>
                   </div>
